# doc-mcp-server

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONFIG_EXAMPLES.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  RELEASE_CHECKLIST.md  pyproject.toml  requirements.txt  run_server.py  start_mcp.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: __init__.py  server.py
src/tools/: __init__.py  advanced.py  content_edit.py  document_basic.py  image_ops.py  interface_doc.py  list_ops.py  style_format.py  table_ops.py
src/utils/: __init__.py  docx_helper.py  error_handler.py
